// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled t-is-info"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 416L416 416 416 480 480 480 480 736 608 736 608 672 544 672 544 416ZM544 288L480 288 480 352 544 352 544 288Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          标题名称
        </span>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`close-all.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
    style="position: relative;"
  >
    <span
      class="t-button__text"
    >
      点击打开多个消息
    </span>
  </button>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
    style="position: relative;"
  >
    <span
      class="t-button__text"
    >
      点击关闭多个消息
    </span>
  </button>
</DocumentFragment>
`;

exports[`content.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          自定义内容（字符串）
        </span>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
  <br />
  <div
    class="t-notification"
  >
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          自定义内容
        </span>
      </div>
      <div>
        这是一条消息通知
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`footer.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          自定义底部详情
        </span>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
      <div
        class="t-notification__detail"
      >
        <div
          class="t-notification__detail"
        >
          <span
            class="t-notification__detail--item"
          >
            重启
          </span>
          <span
            class="t-notification__detail--item t-is-active"
          >
            查看详情
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`icon.jsx 1`] = `
<DocumentFragment>
  <div
    style="margin-bottom: 16px;"
  >
    <div
      class="t-notification"
    >
      <div
        class="t-notification__icon"
      >
        <svg
          class="t-icon t-icon-info-circle-filled t-is-info"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 416L416 416 416 480 480 480 480 736 608 736 608 672 544 672 544 416ZM544 288L480 288 480 352 544 352 544 288Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="t-notification__main"
      >
        <div
          class="t-notification__title__wrap"
        >
          <span
            class="t-notification__title"
          >
            普通通知
          </span>
        </div>
        <div
          class="t-notification__content"
        >
          这是一条消息通知这是一条消息通知这是一条消息通知这是一条消息通知这是一条消息通知这是一条消息通知这是一条消息通知
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin-bottom: 16px;"
  >
    <div
      class="t-notification"
    >
      <div
        class="t-notification__icon"
      >
        <svg
          class="t-icon t-icon-info-circle-filled t-is-error"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 416L416 416 416 480 480 480 480 736 608 736 608 672 544 672 544 416ZM544 288L480 288 480 352 544 352 544 288Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="t-notification__main"
      >
        <div
          class="t-notification__title__wrap"
        >
          <span
            class="t-notification__title"
          >
            危险通知
          </span>
        </div>
        <div
          class="t-notification__content"
        >
          这是一条消息通知这是一条消息通知这是一条消息通知这是一条消息通知这是一条消息通知这是一条消息通知这是一条消息通知
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin-bottom: 16px;"
  >
    <div
      class="t-notification"
    >
      <div
        class="t-notification__icon"
      >
        <svg
          class="t-icon t-icon-info-circle-filled t-is-warning"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 416L416 416 416 480 480 480 480 736 608 736 608 672 544 672 544 416ZM544 288L480 288 480 352 544 352 544 288Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="t-notification__main"
      >
        <div
          class="t-notification__title__wrap"
        >
          <span
            class="t-notification__title"
          >
            告警通知
          </span>
        </div>
        <div
          class="t-notification__content"
        >
          这是一条消息通知这是一条消息通知这是一条消息通知这是一条消息通知这是一条消息通知这是一条消息通知这是一条消息通知
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin-bottom: 16px;"
  >
    <div
      class="t-notification"
    >
      <div
        class="t-notification__icon"
      >
        <svg
          class="t-icon t-icon-check-circle-filled t-is-success"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM690.8655168 353.58818368L464.56401024 579.82818368 328.82684416 444.09785152 283.57201024 489.35268544 464.59134592 670.3720192 509.84617984 625.1171872 736.120352 398.8430176 690.8655168 353.58818368Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="t-notification__main"
      >
        <div
          class="t-notification__title__wrap"
        >
          <span
            class="t-notification__title"
          >
            成功通知
          </span>
        </div>
        <div
          class="t-notification__content"
        >
          这是一条消息通知这是一条消息通知这是一条消息通知这是一条消息通知这是一条消息通知这是一条消息通知这是一条消息通知
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`operation.jsx 1`] = `
<DocumentFragment>
  <div
    style="margin-bottom: 20px;"
  >
    <div
      class="t-notification"
    >
      <div
        class="t-notification__icon"
      >
        <svg
          class="t-icon t-icon-info-circle-filled t-is-info"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 416L416 416 416 480 480 480 480 736 608 736 608 672 544 672 544 416ZM544 288L480 288 480 352 544 352 544 288Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="t-notification__main"
      >
        <div
          class="t-notification__title__wrap"
        >
          <span
            class="t-notification__title"
          >
            超出的文本省略号显示
          </span>
        </div>
        <div
          class="t-notification__content"
        >
          文案不限长度，但是展示最大显示三行折行的末尾显示折行末尾显示折行末尾显示折行末尾显示折行末尾显示折行折行末尾显示折行折行末尾显示折行末尾显示折行折行末尾
        </div>
        <div
          class="t-notification__detail"
        >
          <div>
            <button
              class="t-button t-button--theme-primary t-button--variant-text"
              style="position: relative;"
            >
              <span
                class="t-button__text"
              >
                查看详情
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin-bottom: 20px;"
  >
    <div
      class="t-notification"
    >
      <div
        class="t-notification__icon"
      >
        <svg
          class="t-icon t-icon-info-circle-filled t-is-info"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 416L416 416 416 480 480 480 480 736 608 736 608 672 544 672 544 416ZM544 288L480 288 480 352 544 352 544 288Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="t-notification__main"
      >
        <div
          class="t-notification__title__wrap"
        >
          <span
            class="t-notification__title"
          >
            自定义底部
          </span>
        </div>
        <div
          class="t-notification__content"
        >
          使用 props function 自定义底部内容
        </div>
        <div
          class="t-notification__detail"
        >
          <div>
            <button
              class="t-button t-button--theme-primary t-button--variant-text"
              style="position: relative;"
            >
              <span
                class="t-button__text"
              >
                查看详情
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin-bottom: 20px;"
  >
    <div
      class="t-notification"
    >
      <div
        class="t-notification__icon"
      >
        <svg
          class="t-icon t-icon-info-circle-filled t-is-info"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 416L416 416 416 480 480 480 480 736 608 736 608 672 544 672 544 416ZM544 288L480 288 480 352 544 352 544 288Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="t-notification__main"
      >
        <div
          class="t-notification__title__wrap"
        >
          <span
            class="t-notification__title"
          >
            <div>
              自定义标题 
              <small>
                我是副标题
              </small>
            </div>
          </span>
        </div>
        <div
          class="t-notification__content"
        >
          1. 使用 props function 自定义标题；2. 使用插槽自定义底部内容
        </div>
        <div
          class="t-notification__detail"
        >
          <div
            slot="footer"
          >
            <button
              class="t-button t-button--theme-default t-button--variant-text"
              style="position: relative;"
            >
              <span
                class="t-button__text"
              >
                知道了
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin-bottom: 20px;"
  >
    <div
      class="t-notification"
    >
      <div
        class="t-notification__icon"
      >
        <svg
          class="t-icon t-icon-info-circle-filled t-is-info"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 416L416 416 416 480 480 480 480 736 608 736 608 672 544 672 544 416ZM544 288L480 288 480 352 544 352 544 288Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="t-notification__main"
      >
        <div
          class="t-notification__title__wrap"
        >
          <span
            class="t-notification__title"
          >
            <div>
              自定义标题 
              <small>
                我是副标题
              </small>
            </div>
          </span>
        </div>
        <div
          class="t-notification__content"
        >
          1. 使用插槽自定义标题 2. 使用插槽自定义底部内容
        </div>
        <div
          class="t-notification__detail"
        >
          <div>
            <button
              class="t-button t-button--theme-default t-button--variant-text"
              style="position: relative;"
            >
              <span
                class="t-button__text"
              >
                重启
              </span>
            </button>
            <button
              class="t-button t-button--theme-primary t-button--variant-text"
              style="position: relative;"
            >
              <span
                class="t-button__text"
              >
                稍后提醒我(10s)
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin-bottom: 20px;"
  >
    <div
      class="t-notification"
    >
      <div
        class="t-notification__icon"
      >
        <svg
          class="t-icon t-icon-info-circle-filled t-is-info"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 416L416 416 416 480 480 480 480 736 608 736 608 672 544 672 544 416ZM544 288L480 288 480 352 544 352 544 288Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="t-notification__main"
      >
        <div
          class="t-notification__title__wrap"
        >
          <span
            class="t-notification__title"
          >
            自定义内容
          </span>
        </div>
        <div
          class="t-notification__content"
        >
          使用插槽自定义内容
        </div>
        <div
          class="t-notification__detail"
        >
          <div>
            <button
              class="t-button t-button--theme-default t-button--variant-text"
              style="position: relative;"
            >
              <span
                class="t-button__text"
              >
                重启
              </span>
            </button>
            <button
              class="t-button t-button--theme-primary t-button--variant-text"
              style="position: relative;"
            >
              <span
                class="t-button__text"
              >
                更多
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`placement.jsx 1`] = `
<DocumentFragment>
  <div>
    <div
      class="t-input"
      style="width: 130px; display: inline-block; margin: 0px 20px 36px 0px;"
    >
      <input
        class="t-input__inner"
        placeholder="请输入横向偏移量"
        value=""
      />
    </div>
    <div
      class="t-input"
      style="width: 130px; display: inline-block; margin: 0px 20px 36px 0px;"
    >
      <input
        class="t-input__inner"
        placeholder="请输入纵向偏移量"
        value=""
      />
    </div>
  </div>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
    style="position: relative;"
  >
    <span
      class="t-button__text"
    >
      左上角
    </span>
  </button>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
    style="position: relative;"
  >
    <span
      class="t-button__text"
    >
      右上角
    </span>
  </button>
  <br />
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
    style="position: relative;"
  >
    <span
      class="t-button__text"
    >
      左下角
    </span>
  </button>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
    style="position: relative;"
  >
    <span
      class="t-button__text"
    >
      右下角
    </span>
  </button>
</DocumentFragment>
`;

exports[`plugin.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
    style="position: relative;"
  >
    <span
      class="t-button__text"
    >
      信息
    </span>
  </button>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
    style="position: relative;"
  >
    <span
      class="t-button__text"
    >
      成功
    </span>
  </button>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
    style="position: relative;"
  >
    <span
      class="t-button__text"
    >
      警告
    </span>
  </button>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
    style="position: relative;"
  >
    <span
      class="t-button__text"
    >
      错误
    </span>
  </button>
</DocumentFragment>
`;

exports[`toggle.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
    style="position: relative;"
  >
    <span
      class="t-button__text"
    >
      自由控制关闭时机
    </span>
  </button>
</DocumentFragment>
`;
